[gd_scene load_steps=13 format=3 uid="uid://bh3y365woct67"]

[ext_resource type="Script" path="res://Node2D.gd" id="1_aqqqx"]
[ext_resource type="Script" path="res://clock.gd" id="2_si4py"]
[ext_resource type="Texture2D" uid="uid://dgiq84ccr524c" path="res://textures/clocksprites/center.png" id="2_y6f1y"]
[ext_resource type="Texture2D" uid="uid://chyxtw02hu2d3" path="res://textures/clocksprites/hand_blue.png" id="4_vw5j4"]
[ext_resource type="Texture2D" uid="uid://lwp6vyaxl7ws" path="res://textures/clocksprites/hand_red.png" id="5_a8m3w"]
[ext_resource type="Texture2D" uid="uid://dlem8y52q81ln" path="res://textures/clocksprites/hand_yellow.png" id="6_vu5bj"]
[ext_resource type="Texture2D" uid="uid://bbomulf34m2iu" path="res://textures/clocksprites/body.png" id="7_5x34s"]
[ext_resource type="Texture2D" uid="uid://bshndvd42ej38" path="res://textures/clocksprites/note_blue.png" id="8_8ult5"]
[ext_resource type="Texture2D" uid="uid://50now88g5py2" path="res://textures/clocksprites/note_empty.png" id="9_klsjv"]
[ext_resource type="Texture2D" uid="uid://erv0wtmokh1f" path="res://textures/clocksprites/note_hit.png" id="10_8kqqe"]
[ext_resource type="Texture2D" uid="uid://tsd5e82ruf7k" path="res://textures/clocksprites/note_red.png" id="11_xsdx0"]
[ext_resource type="Texture2D" uid="uid://dnhk6yh44868l" path="res://textures/clocksprites/note_yellow.png" id="12_k3ajo"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_aqqqx")

[node name="guide" type="Node2D" parent="."]

[node name="clock" type="Node2D" parent="."]
script = ExtResource("2_si4py")

[node name="center" type="Sprite2D" parent="clock"]
z_index = 4
texture_filter = 1
position = Vector2(1057, 538)
scale = Vector2(5, 5)
texture = ExtResource("2_y6f1y")

[node name="HandBlue" type="Sprite2D" parent="clock"]
z_index = 3
texture_filter = 1
position = Vector2(1037, 280)
scale = Vector2(5, 5)
texture = ExtResource("4_vw5j4")
centered = false
offset = Vector2(-8, -30)

[node name="HandRed" type="Sprite2D" parent="clock"]
visibility_layer = 8
z_index = 2
texture_filter = 1
position = Vector2(1099, 271)
scale = Vector2(5, 5)
texture = ExtResource("5_a8m3w")
centered = false
offset = Vector2(-8, -30)

[node name="HandYellow" type="Sprite2D" parent="clock"]
z_index = 1
texture_filter = 1
position = Vector2(989, 310)
scale = Vector2(5, 5)
texture = ExtResource("6_vu5bj")
centered = false
offset = Vector2(-8, -30)

[node name="Body" type="Sprite2D" parent="clock"]
visibility_layer = 32
texture_filter = 1
position = Vector2(631, 271)
scale = Vector2(5, 5)
texture = ExtResource("7_5x34s")

[node name="notes" type="Node2D" parent="."]

[node name="Blue" type="Sprite2D" parent="notes"]
texture_filter = 1
texture = ExtResource("8_8ult5")

[node name="Red" type="Sprite2D" parent="notes"]
texture_filter = 1
texture = ExtResource("11_xsdx0")

[node name="Yellow" type="Sprite2D" parent="notes"]
texture_filter = 1
texture = ExtResource("12_k3ajo")

[node name="NoteEmpty" type="Sprite2D" parent="notes"]
texture_filter = 1
position = Vector2(109, 179)
scale = Vector2(5, 5)
texture = ExtResource("9_klsjv")

[node name="NoteHit" type="Sprite2D" parent="notes"]
visible = false
texture_filter = 1
position = Vector2(201, 180)
scale = Vector2(5, 5)
texture = ExtResource("10_8kqqe")

[node name="Player" type="AudioStreamPlayer" parent="."]
